--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "docker": "^1.0.0",
     "nginx": "^1.0.7",
     "querystring": "^0.2.1",
     "vue": "^3.2.13",
